# c_platformer

./: CMakeLists.txt  Makefile  README.md  build_msys2.sh  install-deps.sh  logging.c  logging.h  main.c  physics_demo  platformer  summary.txt
.claude/: settings.local.json
.github/workflows/: release.yml
